--- a/catalog/templates/catalog/base.html
+++ b/catalog/templates/catalog/base.html
@@ -10,9 +10,12 @@
     <div class="container">
         <header class="d-flex justify-content-center py-3">
             <ul class="nav nav-pills">
-            <li class="nav-item"><a href="{% url "catalog:index" %}" class="nav-link active" aria-current="page">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Catalog</a></li>
-            <li class="nav-item"><a href="{% url "catalog:about" %}" class="nav-link">About</a></li>
+            {% url "catalog:index" as url %}
+            <li class="nav-item"><a href="{{ url }}" class="nav-link {% if request.path == url %}active{% endif %}">Home</a></li>
+            {% url "blog:list" as url %}
+            <li class="nav-item"><a href="{{ url }}" class="nav-link {% if request.path == url %}active{% endif %}">Blog</a></li>
+            {% url "catalog:about" as url %}
+            <li class="nav-item"><a href="{{ url }}" class="nav-link {% if request.path == url %}active{% endif %}">About</a></li>
             </ul>
         </header>
     </div>
@@ -24,7 +27,7 @@
         <footer class="py-3 my-4">
             <ul class="nav justify-content-center border-bottom pb-3 mb-3">
             <li class="nav-item"><a href="{% url "catalog:index" %}" class="nav-link px-2 text-body-secondary">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link px-2 text-body-secondary">Catalog</a></li>
+            <li class="nav-item"><a href="{% url "blog:list" %}" class="nav-link px-2 text-body-secondary">Blog</a></li>
             <li class="nav-item"><a href="{% url "catalog:about" %}" class="nav-link px-2 text-body-secondary">About</a></li>
             </ul>
             <p class="text-center text-body-secondary">© 2023 Company, Inc</p>
